# mlproject

./: Dockerfile  application.py  pyproject.toml  streamlit_app.py
.aws/: task-definition.json
.github/workflows/: aws.yml
src/components/: push_datasets_AWS.py
