[project]
name = "mlproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Youssef Abdelmoneim"}
]
dependencies = [
    "boto3>=1.42.73",
    "catboost>=1.2.10",
    "dill>=0.4.1",
    "fastapi>=0.135.1",
    "great-expectations>=1.15.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
]
